--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
 # FastAPI and web framework
-fastapi[all]==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+fastapi[all]>=0.110.0
+uvicorn[standard]>=0.27.0
+python-multipart>=0.0.7
 
 # Database
 sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10
 
 # Redis and caching
 redis==5.0.1
@@ -23,30 +23,30 @@ pydantic==2.5.0
 email-validator==2.1.0
 
 # HTTP client
-aiohttp==3.9.1
+aiohttp>=3.10.0
 httpx==0.25.2
 
 # Data processing
-pandas==2.1.4
-numpy==1.25.2
+pandas>=2.2.0
+numpy>=1.26.0
 beautifulsoup4==4.12.2
-lxml==4.9.3
+lxml>=5.0.0
 feedparser==6.0.10
 
 # AI and ML
-google-generativeai==0.3.2
-transformers==4.36.0
-torch==2.1.1
-scikit-learn==1.3.2
+google-generativeai>=0.8.0
+transformers>=4.40.0
+torch>=2.2.0
+scikit-learn>=1.4.0
 
 # Configuration and environment
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
 
 # Logging and monitoring
-structlog==23.2.0
-sentry-sdk==1.38.0
-ddtrace==2.5.0
+structlog>=24.0.0
+sentry-sdk>=2.0.0
+# ddtrace>=2.10.0  # Temporarily disabled due to Python 3.13 compatibility
 
 # Testing
 pytest==7.4.3
@@ -68,4 +68,4 @@ python-dateutil==2.8.2
 
 # Utilities
 python-slugify==8.0.1
-Pillow==10.1.0
+Pillow>=10.4.0
