--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,13 @@
   "description": "Frontend for Project Kessan - AI-Powered Japanese Stock Analysis Platform",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.33",
